(styles): Fix font not loading on safari

--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -9,7 +9,7 @@
 /* cyrillic-ext */
 @font-face {
   font-family: "Nunito";
-  font-style: italic;
+  font-style: normal;
   font-weight: 200;
   font-display: swap;
   src: url('../public/fonts/Nunito/Nunito-cyrillic.woff2')
@@ -20,7 +20,7 @@
 /* cyrillic */
 @font-face {
   font-family: "Nunito";
-  font-style: italic;
+  font-style: normal;
   font-weight: 200;
   font-display: swap;
   src: url('../public/fonts/Nunito/Nunito-cyrillic.woff2')
@@ -30,7 +30,7 @@
 /* vietnamese */
 @font-face {
   font-family: "Nunito";
-  font-style: italic;
+  font-style: normal;
   font-weight: 200;
   font-display: swap;
   src: url('../public/fonts/Nunito/Nunito-vietnamese.woff2')
@@ -41,7 +41,7 @@
 /* latin-ext */
 @font-face {
   font-family: "Nunito";
-  font-style: italic;
+  font-style: normal;
   font-weight: 200;
   font-display: swap;
   src: url('../public/fonts/Nunito/Nunito-latin-ext.woff2')
@@ -52,7 +52,7 @@
 /* latin */
 @font-face {
   font-family: "Nunito";
-  font-style: italic;
+  font-style: normal;
   font-weight: 200;
   font-display: swap;
   src: url('../public/fonts/Nunito/Nunito-latin.woff2')
